added about us page

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,11 +1,282 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SciPy About Us</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/about.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script
+      src="https://example.com/fontawesome/v6.4.2/js/fontawesome.js"
+      data-auto-replace-svg="nest"
+    ></script>
+    <title>SciPy About Us</title>
+  </head>
+  <body>
+    <div class="content">
+      <!-- header section  -->
+
+      <section id="home-page" class="home-page">
+        <header id="header" class="navigation-menu">
+          <div class="auto-container">
+            <nav class="nav-bar">
+              <div class="logo">
+                <img src="/assets/header-logo.png" alt="" />
+              </div>
+              <div class="menu-list">
+                <ul style="margin: 0">
+                  <li>
+                    <a
+                      id="home"
+                      class="active-link home-color .main-a"
+                      style="color: #0092ff"
+                      href="#home-page"
+                      ><span>Home</span></a
+                    >
+                  </li>
+                  <li class="dropdown">
+                    <a href="#" class="main-a">Services</a>
+                    <ul class="services-list">
+                      <li>
+                        <a href="#"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span"
+                            >Software Development</span
+                          ></a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Advanced Tech</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span"
+                            >Maintenance and Support</span
+                          ></a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Advisory</span></a
+                        >
+                      </li>
+                    </ul>
+                  </li>
+                  <li><a href="#" class=".main-a">Technologies</a></li>
+                  <li>
+                    <a id="About-us" class="active-link" href="#">About Us</a>
+                  </li>
+                  <li>
+                    <a id="Contact-us" class="active-link" href="#"
+                      >Contact Us</a
+                    >
+                  </li>
+                </ul>
+              </div>
+              <div class="quote-btn">
+                <a class="btn btn-outline-primary btn-effect" href="#"
+                  >Get Quote</a
+                >
+                <div class="sidemenu-btn">
+                  <span></span>
+                  <span></span>
+                </div>
+              </div>
+            </nav>
+          </div>
+        </header>
+        <div class="about-home">
+          <div class="header-top">
+            <div class="auto-container">
+              <div class="header-top-menu">
+                <div class="header-top-nav">
+                  <a href="#">Terms & Conditions</a>
+                  <a class="terms-not" href="#">Privacy Policy</a>
+                  <a class="terms-not" href="#">Contact Us</a>
+                </div>
+                <div class="header-right-nav">
+                  <div class="email-header">
+                    <span>Email us</span>
+                    <a href="#">info@scipytechnologies.com</a>
+                  </div>
+                  <div class="header-top-social">
+                    <a href="#">FB.</a>
+                    <a href="#">IN.</a>
+                    <a href="#">TW.</a>
+                    <a href="#">LN.</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="auto-container">
+            <div class="page-title">
+              <h1 class="title-abt">About Us</h1>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><p class="page-about">About us</p></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer class="footer-main">
+        <div class="auto-container">
+          <div class="main-footer-widgets">
+            <div class="footer-col">
+              <h5 class="footer-title">Subscribe Us</h5>
+              <div class="footer-text">
+                Join us to our Newsletter and releases submit.
+              </div>
+              <div class="form-group">
+                <input type="email" placeholder="Enter your email!" required />
+                <button type="submit" class="submit-newsletter">
+                  <i class="fa-solid fa-arrow-right email-arrow"></i>
+                </button>
+              </div>
+              <div class="footer-privacy">
+                Our <span class="blue-footer">Privacy Policy</span> and provide
+                consent to receive <br />
+                updates from our company.
+              </div>
+            </div>
+            <div class="footer-col">
+              <div class="footer-widget-links">
+                <h4 class="footer-title">Service Links</h4>
+                <ul class="main-footer-list">
+                  <li><a href="#">Software Development</a></li>
+                  <li><a href="#">Advanced Tech</a></li>
+                  <li><a href="#">Maintenance and Support</a></li>
+                  <li><a href="#">Advisory</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer-col">
+              <div class="footer-widget-links">
+                <h4 class="footer-title">Quick links</h4>
+                <ul class="main-footer-list">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Services</a></li>
+                  <li><a href="#">Technologies</a></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Contact Us</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer-col">
+              <div class="footer-widget-links-2">
+                <h4 class="footer-title">Lateset News</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="copyright-foot">
+          <div class="auto-container">
+            <div class="footer-copyright-text">
+              <span class="blue-footer">SciPy Technologies </span> ©
+              Copyright-2023 All Rights Reserved.
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
+
+    <!-- Side bar menu for mobile and tablet views only -->
+    <div class="sidebar">
+      <div class="close-btn">
+        <span></span>
+        <span></span>
+      </div>
+      <ul class="sidebar-menu">
+        <li><img src="/assets/header-logo.png" alt="" /></li>
+        <li><a id="home-sidebar" href="#">Home</a></li>
+        <li><a id="Service-sidebar" href="#">Services</a></li>
+        <li><a href="#">Technologies</a></li>
+        <li><a id="About-us-sidebar" href="#">About</a></li>
+        <li><a id="contact-sidebar" href="#">Contact</a></li>
+      </ul>
+    </div>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <!-- Owl Carousel JavaScript and jQuery -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="jquery.min.js"></script>
+    <script src="owl.carousel.min.js"></script>
+    <script type="text/JavaScript">
+            $('.owl-carousel').owlCarousel({
+          loop:true,
+          autoplay: true,
+          autoplayTimeout: 2000,
+          autoplayHoverPause: true,
+          stagePadding: 20,
+          dots: true,
+          responsiveClass:true,
+          responsiveBaseElement: 'section',
+          margin:10,
+          nav:false,
+          navText: ["⇽","⇾"],
+          responsive:{
+              0:{
+                  items:1
+              },
+              600:{
+                  items:2
+              },
+              900:{
+                items: 3
+              },
+              1200:{
+                items:4
+              },
+          }
+      })
+    </script>
+    <script src="/js/about.js"></script>
+  </body>
 </html>
