--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     ></script>
   </head>
   <body>
+    <!-- <div class="sidebar-closer"></div> -->
     <div class="content">
       <!-- header section  -->
-      
       <section id="home-page" class="home-page">
         <header id="header" class="navigation-menu">
           <div class="auto-container">
@@ -353,7 +353,7 @@
                   tech industry.
                 </p>
                 <div class="aboutus-btn">
-                  <a href="#">About Us</a>
+                  <a href="/aboutus.html">About Us</a>
                 </div>
               </div>
             </div>
