--- a/aboutus.html
+++ b/aboutus.html
@@ -31,6 +31,7 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="odometer-theme-car.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
@@ -156,6 +157,98 @@
           </div>
         </div>
       </section>
+      <section class="about-section">
+        <div class="auto-container">
+          <div class="about-sect-row">
+            <div class="about-sect-col">
+              <div class="img-content-inner">
+                <div class="img-contents">
+                  <div class="about-counter">
+                    <h3>+12k</h3>
+                    <p>Our Active Member</p>
+                  </div>
+                  <div class="about-3-img">
+                    <img class="about-3" src="/assets/about/about-3.jpg" />
+                  </div>
+                </div>
+                <div class="img-contents">
+                  <div class="about-4-img">
+                    <div class="about-img-hover"></div>
+                    <img class="about-4" src="/assets/about/about-4.jpg" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="about-sect-col">
+              <div class="text-contain-s">
+                <div class="about-one-title">
+                  <i class="fa-solid fa-computer-mouse"></i>
+                  Our About
+                </div>
+                <h3>We Help our Companies Scale <br> Engineering IT services.</h3>
+                <div class="about-one-text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam accusantium ab, praesentium iste natus qui quasi voluptate quia neque facere, enim porro, exercitationem laboriosam nihil dolorem? Animi officia laboriosam harum!
+                </div>
+                <div class="about-clear-row">
+                  <div class="about-clear-col">
+                    <i class="fa-regular fa-lightbulb"></i>
+                    <h6>Automobile Manufacturing</h6>
+                    <div class="about-one-block-text">
+                      Fusce eu eros nec felis venenatis fermentum sit amet eget
+                    </div>
+                  </div>
+                  <div class="about-clear-col">
+                    <i class="fa-regular fa-lightbulb"></i>
+                    <h6>Automobile Manufacturing</h6>
+                    <div class="about-one-block-text">
+                      Fusce eu eros nec felis venenatis fermentum sit amet eget
+                    </div>
+                  </div>
+                </div>
+                <div class="about-btn-box">
+                  <a href="" class="btn btn-primary more-about-btn">More About ➜</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="sponcers-sect">
+        <div class="auto-container">
+          <div class="sponcers">
+            <div class="owl-carousel owl-theme">
+              <div class="item">
+                <img src="/assets/clients/1.png" alt="">
+              </div>
+              <div class="item">
+                <img src="/assets/clients/1.png" alt="">
+              </div>
+              <div class="item">
+                <img src="/assets/clients/1.png" alt="">
+              </div>
+              <div class="item">
+                <img src="/assets/clients/1.png" alt="">
+              </div>
+              <div class="item">
+                <img src="/assets/clients/1.png" alt="">
+              </div>
+              <div class="item">
+                <img src="/assets/clients/1.png" alt="">
+              </div>
+              <div class="item">
+                <img src="/assets/clients/1.png" alt="">
+              </div>
+              <div class="item">
+                <img src="/assets/clients/1.png" alt="">
+              </div>
+              <div class="item">
+                <img src="/assets/clients/1.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <footer class="footer-main">
         <div class="auto-container">
           <div class="main-footer-widgets">
@@ -248,6 +341,7 @@
     ></script>
     <script src="jquery.min.js"></script>
     <script src="owl.carousel.min.js"></script>
+    <script src="odometer.js"></script>
     <script type="text/JavaScript">
             $('.owl-carousel').owlCarousel({
           loop:true,
@@ -255,7 +349,7 @@
           autoplayTimeout: 2000,
           autoplayHoverPause: true,
           stagePadding: 20,
-          dots: true,
+          dots: false,
           responsiveClass:true,
           responsiveBaseElement: 'section',
           margin:10,
@@ -263,16 +357,16 @@
           navText: ["⇽","⇾"],
           responsive:{
               0:{
-                  items:1
+                  items:3
               },
               600:{
-                  items:2
+                  items:3
               },
               900:{
-                items: 3
+                items: 4
               },
               1200:{
-                items:4
+                items:5
               },
           }
       })
