aboutus page complete

--- a/aboutus.html
+++ b/aboutus.html
@@ -62,7 +62,7 @@
                       id="home"
                       class="active-link home-color .main-a"
                       style="color: #0092ff"
-                      href="#home-page"
+                      href="./index.html"
                       ><span>Home</span></a
                     >
                   </li>
@@ -150,7 +150,7 @@
             <div class="page-title">
               <h1 class="title-abt">About Us</h1>
               <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><p class="page-about">About us</p></li>
               </ul>
             </div>
@@ -185,20 +185,26 @@
                   <i class="fa-solid fa-computer-mouse"></i>
                   Our About
                 </div>
-                <h3>We Help our Companies Scale <br> Engineering IT services.</h3>
+                <h3>
+                  We Help our Companies Scale <br />
+                  Engineering IT services.
+                </h3>
                 <div class="about-one-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam accusantium ab, praesentium iste natus qui quasi voluptate quia neque facere, enim porro, exercitationem laboriosam nihil dolorem? Animi officia laboriosam harum!
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Veniam accusantium ab, praesentium iste natus qui quasi
+                  voluptate quia neque facere, enim porro, exercitationem
+                  laboriosam nihil dolorem? Animi officia laboriosam harum!
                 </div>
                 <div class="about-clear-row">
                   <div class="about-clear-col">
-                    <i class="fa-regular fa-lightbulb"></i>
+                    <div class="icon-div"><i class="fa-regular fa-lightbulb"></i></div>
                     <h6>Automobile Manufacturing</h6>
                     <div class="about-one-block-text">
                       Fusce eu eros nec felis venenatis fermentum sit amet eget
                     </div>
                   </div>
                   <div class="about-clear-col">
-                    <i class="fa-regular fa-lightbulb"></i>
+                    <div class="icon-div"><i class="fa-regular fa-lightbulb"></i></div>
                     <h6>Automobile Manufacturing</h6>
                     <div class="about-one-block-text">
                       Fusce eu eros nec felis venenatis fermentum sit amet eget
@@ -206,7 +212,9 @@
                   </div>
                 </div>
                 <div class="about-btn-box">
-                  <a href="" class="btn btn-primary more-about-btn">More About ➜</a>
+                  <a href="" class="btn btn-primary more-about-btn"
+                    >More About ➜</a
+                  >
                 </div>
               </div>
             </div>
@@ -218,37 +226,208 @@
           <div class="sponcers">
             <div class="owl-carousel owl-theme">
               <div class="item">
-                <img src="/assets/clients/1.png" alt="">
+                <img src="/assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="">
+                <img src="/assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="">
+                <img src="/assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="">
+                <img src="/assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="">
+                <img src="/assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="">
+                <img src="/assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="">
+                <img src="/assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="">
+                <img src="/assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="">
+                <img src="/assets/clients/1.png" alt="" />
               </div>
             </div>
           </div>
         </div>
       </section>
-
+      <section class="services-tab">
+        <div class="auto-container">
+          <div class="features-one">
+            <div class="feature-row">
+              <div class="grid-item">
+                <i class="fa-brands fa-uncharted"></i>
+                <h6>Software Development</h6>
+              </div>
+              <div class="grid-item">
+                <i class="fa-solid fa-microchip"></i>
+                <h6>Advanced Tech</h6>
+              </div>
+              <div class="grid-item">
+                <i class="fa-solid fa-headset"></i>
+                <h6>Maintenance Support</h6>
+              </div>
+              <div class="grid-item">
+                <i class="fa-regular fa-comment"></i>
+                <h6>Advisory</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="testimonials-sect">
+        <div class="auto-container">
+          <div class="gallery-title">
+            <h3 class="sec-title-gallery">
+              <i class="fa-solid fa-user-pen"></i>OUR TESTIMONIALS
+            </h3>
+            <h2 class="gallery-title-head">What Client Says?</h2>
+            <div class="sec-title-seperator">
+              <div class="blue-item"></div>
+            </div>
+          </div>
+          <div class="clients-row">
+            <div class="clients-col">
+              <div class="client-card">
+                <div class="upper-part">
+                  <div class="quote-symbol"><i class="fa-solid fa-quote-left"></i></div>
+                  <div class="profile-pic">
+                    <img src="/assets/clients/author-2.jpg" alt="" />
+                  </div>
+                  <div class="quote-text">
+                    Nam ultricies sed leolet eget vehic. Sed varius non magna
+                    quis mats. Integer finibus nil at tempus semper, rokomoni
+                    our has auctor leo.
+                  </div>
+                </div>
+                <div class="lower-part">
+                  <h6 >Ruksana Rahman Maya</h6>
+                  <div class="quote-div">Brand Designer</div>
+                </div>
+              </div>
+            </div>
+            <div class="clients-col">
+              <div class="client-card">
+                <div class="upper-part">
+                  <div class="quote-symbol"><i class="fa-solid fa-quote-left"></i></div>
+                  <div class="profile-pic">
+                    <img src="/assets/clients/author-2.jpg" alt="" />
+                  </div>
+                  <div class="quote-text">
+                    Nam ultricies sed leolet eget vehic. Sed varius non magna
+                    quis mats. Integer finibus nil at tempus semper, rokomoni
+                    our has auctor leo.
+                  </div>
+                </div>
+                <div class="lower-part">
+                  <h6 >Ruksana Rahman Maya</h6>
+                  <div class="quote-div">Brand Designer</div>
+                </div>
+              </div>
+            </div>
+            <div class="clients-col">
+              <div class="client-card">
+                <div class="upper-part">
+                  <div class="quote-symbol"><i class="fa-solid fa-quote-left"></i></div>
+                  <div class="profile-pic">
+                    <img src="/assets/clients/author-2.jpg" alt="" />
+                  </div>
+                  <div class="quote-text">
+                    Nam ultricies sed leolet eget vehic. Sed varius non magna
+                    quis mats. Integer finibus nil at tempus semper, rokomoni
+                    our has auctor leo.
+                  </div>
+                </div>
+                <div class="lower-part">
+                  <h6 >Ruksana Rahman Maya</h6>
+                  <div class="quote-div">Brand Designer</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="team-members" style="margin-top: 100px;">
+        <div class="auto-container">
+          <div class="gallery-title">
+            <h3 class="sec-title-gallery">
+              <i class="fa-solid fa-user-group"></i>OUR TEAM
+            </h3>
+            <h2 class="gallery-title-head">Team Member</h2>
+            <div class="sec-title-seperator">
+              <div class="blue-item"></div>
+            </div>
+          </div>
+          <div class="team-members-gallery">
+            <div class="team-row">
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="/assets/teams/nithya.jpeg"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Nithya Rajendran</a></h4>
+                  <p class="member-position">Software Developer</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img class="team-img" src="/assets/teams/chinju.jpg" alt="" />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Chinju</a></h4>
+                  <p class="member-position">System Engineer</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="/assets/teams/vargees.jpg"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Varghese</a></h4>
+                  <p class="member-position">Software Developer</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <footer class="footer-main">
         <div class="auto-container">
           <div class="main-footer-widgets">
