completed services pages

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <i class="fa-solid fa-laptop-code"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="#">Software Development</a>
+                    <a href="/pages/softwaredev.html">Software Development</a>
                   </h4>
                   <p class="text-card">
                     Industry specific custom Software development solution for
@@ -210,7 +210,7 @@
                     <i class="fa-regular fa-circle-question"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="#">Maintenance & Support</a>
+                    <a href="/pages/softwaredev.html">Maintenance & Support</a>
                   </h4>
                   <p class="text-card">
                     Our Maintenance & Support offer top quality well organised
@@ -229,7 +229,7 @@
                     <i class="fa-solid fa-screwdriver-wrench"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="#">Advisory</a>
+                    <a href="/pages/softwaredev.html">Advisory</a>
                   </h4>
                   <p class="text-card">
                     Having a right advices from experts and services makes your
@@ -249,7 +249,7 @@
                     <i class="fa-solid fa-laptop-code"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="#">Software Development</a>
+                    <a href="/pages/softwaredev.html">Software Development</a>
                   </h4>
                   <p class="text-card">
                     Industry specific custom Software development solution for
@@ -269,7 +269,7 @@
                     <i class="fa-solid fa-robot"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="#">Advanced Tech</a>
+                    <a href="/pages/softwaredev.html">Advanced Tech</a>
                   </h4>
                   <p class="text-card">
                     Our advanced technology features Artificial Intelligence and
@@ -288,7 +288,7 @@
                     <i class="fa-regular fa-circle-question"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="#">Maintenance & Support</a>
+                    <a href="/pages/softwaredev.html">Maintenance & Support</a>
                   </h4>
                   <p class="text-card">
                     Our Maintenance & Support offer top quality well organised
@@ -307,7 +307,7 @@
                     <i class="fa-solid fa-screwdriver-wrench"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="#">Advisory</a>
+                    <a href="/pages/softwaredev.html">Advisory</a>
                   </h4>
                   <p class="text-card">
                     Having a right advices from experts and services makes your
@@ -353,7 +353,7 @@
                   tech industry.
                 </p>
                 <div class="aboutus-btn">
-                  <a href="/aboutus.html">About Us</a>
+                  <a href="/pages/aboutus.html">About Us</a>
                 </div>
               </div>
             </div>
