--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="../css/about.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -150,7 +150,7 @@
             <div class="page-title">
               <h1 class="title-abt">About Us</h1>
               <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><p class="page-about">About us</p></li>
               </ul>
             </div>
