added some finishing touches

--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
                     <a href="#" class="main-a">Services</a>
                     <ul class="services-list">
                       <li>
-                        <a href="#"
+                        <a href="/pages/softwaredev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Software Development</span></a
                         >
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="/pages/AdvancedTech.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Advanced Tech</span></a
                         >
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="/pages/maintenance.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
                             >Maintenance and Support</span
@@ -89,7 +89,7 @@
                         >
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="/pages/advisory.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Advisory</span></a
                         >
@@ -191,7 +191,7 @@
                     <i class="fa-solid fa-robot"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="#">Advanced Tech</a>
+                    <a href="/pages/AdvancedTech.html">Advanced Tech</a>
                   </h4>
                   <p class="text-card">
                     Our advanced technology features Artificial Intelligence and
@@ -210,7 +210,7 @@
                     <i class="fa-regular fa-circle-question"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="/pages/softwaredev.html">Maintenance & Support</a>
+                    <a href="/pages/maintenance.html">Maintenance & Support</a>
                   </h4>
                   <p class="text-card">
                     Our Maintenance & Support offer top quality well organised
@@ -229,7 +229,7 @@
                     <i class="fa-solid fa-screwdriver-wrench"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="/pages/softwaredev.html">Advisory</a>
+                    <a href="/pages/advisory.html">Advisory</a>
                   </h4>
                   <p class="text-card">
                     Having a right advices from experts and services makes your
@@ -269,7 +269,7 @@
                     <i class="fa-solid fa-robot"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="/pages/softwaredev.html">Advanced Tech</a>
+                    <a href="/pages/AdvancedTech.html">Advanced Tech</a>
                   </h4>
                   <p class="text-card">
                     Our advanced technology features Artificial Intelligence and
@@ -288,7 +288,7 @@
                     <i class="fa-regular fa-circle-question"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="/pages/softwaredev.html">Maintenance & Support</a>
+                    <a href="/pages/maintenance.html">Maintenance & Support</a>
                   </h4>
                   <p class="text-card">
                     Our Maintenance & Support offer top quality well organised
@@ -307,7 +307,7 @@
                     <i class="fa-solid fa-screwdriver-wrench"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="/pages/softwaredev.html">Advisory</a>
+                    <a href="/pages/advisory.html">Advisory</a>
                   </h4>
                   <p class="text-card">
                     Having a right advices from experts and services makes your
