--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -148,10 +148,10 @@
           </div>
           <div class="auto-container">
             <div class="page-title">
-              <h1 class="title-abt">Software Development</h1>
+              <h1 class="title-abt">Maintenance and Support</h1>
               <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><p class="page-about">Software Development</p></li>
+                <li><p class="page-about">Maintenance and Support</p></li>
               </ul>
             </div>
           </div>
@@ -167,30 +167,18 @@
                 alt=""
               />
               <div class="lower-content">
-                <h3>Software Development</h3>
+                <h3>Maintenance and Support</h3>
                 <p>
-                  We provide expert and unique Software Development Service for
-                  the needs that are specifically fro industrial trens and
-                  upcomming market. Enchance Business growth and conques market
-                  with interactive web and mobile solution We are effective in
-                  next generation enterprise application on the web, Mobile and
-                  desktop to modernized business process and enhance customers
-                  experience. Extensive Product Development Services across
-                  software development life cycle. We provide persistent product
-                  development service to help you stay competitive in the
-                  market.
+                  Our Application Support offer top quality well organised
+                  adaptive support. We are resposible for the design,
+                  installation, maintenance and requirement of the system and
+                  personal that are at this core of an organisation. We provide
+                  customer support service, for a range of customer to get out
+                  of your product and resolve their problem
                 </p>
                 <p>
-                  Customize the trend that are widely in our networks, design
-                  custom web application that meets all the challenges in
-                  business. We provide you a
-                  secure,interactive,responsive,elegant,sleek and fully
-                  customized UI/UX. Identify the core needs of your business and
-                  develop an app that directly, immediately and throughly meets
-                  that need. We focus on cross platform development and
-                  customized design for IOS & Andriod. Enable smart and seamless
-                  system integration, We build open source content management
-                  system that are designed for customization and integration.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam officia fuga saepe. Laudantium quod voluptatibus modi laborum esse saepe itaque enim perferendis, perspiciatis quasi corporis ullam, earum, nihil dolore aperiam?
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione fugiat adipisci iure sapiente blanditiis! Doloremque consequatur voluptatibus error facere commodi voluptatum! Dolore excepturi neque doloremque earum voluptas aspernatur, modi fuga?
                 </p>
                 <h6>Our Success JOURNEY We can Provide.</h6>
                 <p>
