--- a/pages/AdvancedTech.html
+++ b/pages/AdvancedTech.html
@@ -42,7 +42,7 @@
       src="https://example.com/fontawesome/v6.4.2/js/fontawesome.js"
       data-auto-replace-svg="nest"
     ></script>
-    <title>SciPy | Software Development</title>
+    <title>SciPy |  Advanced Tech</title>
   </head>
   <body>
     <div class="content">
@@ -70,7 +70,7 @@
                     <a href="#" class="main-a">Services</a>
                     <ul class="services-list">
                       <li>
-                        <a href="#"
+                        <a href="/pages/softwaredev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
                             >Software Development</span
@@ -78,13 +78,13 @@
                         >
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="/pages/AdvancedTech.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Advanced Tech</span></a
                         >
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="/pages/maintenance.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
                             >Maintenance and Support</span
@@ -92,7 +92,7 @@
                         >
                       </li>
                       <li>
-                        <a href="#"
+                        <a href="/pages/advisory.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Advisory</span></a
                         >
