--- a/index.html
+++ b/index.html
@@ -676,7 +676,14 @@
       <ul class="sidebar-menu">
         <li><img src="/assets/header-logo.png" alt="" /></li>
         <li><a id="home-sidebar" href="#">Home</a></li>
-        <li><a id="Service-sidebar" href="#">Services</a></li>
+        <li class="service-li"><a id="Service-sidebar" href="#">Services</a>
+          <!-- <ul class="sidebar-dropdown-menu" style="text-wrap: nowrap;">
+            <li><a href="#">Software Development</a></li>
+            <li><a href="#">Advanced Tech</a></li>
+            <li><a href="#">Maintenance and Support</a></li>
+            <li><a href="#">Advisory</a></li>
+          </ul>
+        </li> -->
         <li><a href="#">Technologies</a></li>
         <li><a id="About-us-sidebar" href="#">About</a></li>
         <li><a id="contact-sidebar" href="#">Contact</a></li>
