--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -42,7 +42,7 @@
       src="https://example.com/fontawesome/v6.4.2/js/fontawesome.js"
       data-auto-replace-svg="nest"
     ></script>
-    <title>SciPy About Us</title>
+    <title>SciPy | About Us</title>
   </head>
   <body>
     <div class="content">
