--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -62,7 +62,7 @@
                       id="home"
                       class="active-link home-color .main-a"
                       style="color: #0092ff"
-                      href="../index.html"
+                      href="/index.html"
                       ><span>Home</span></a
                     >
                   </li>
