--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -71,7 +77,9 @@
                       <li>
                         <a href="/pages/softwaredev.html"
                           ><span class="icon-span">⤥</span
-                          ><span class="text-span">Software Development</span></a
+                          ><span class="text-span"
+                            >Software Development</span
+                          ></a
                         >
                       </li>
                       <li>
@@ -101,7 +109,9 @@
                     <a id="About-us" class="active-link" href="#">About Us</a>
                   </li>
                   <li>
-                    <a id="Contact-us" class="active-link" href="#">Contact Us</a>
+                    <a id="Contact-us" class="active-link" href="#"
+                      >Contact Us</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -556,8 +566,9 @@
         <div class="auto-container">
           <div class="gallery-title">
             <h3 class="sec-title-gallery">
-              <i class="fa-solid fa-headset"></i>CONTACT US</h3>
-              <h2 class="gallery-title-head">How to reach us</h2>
+              <i class="fa-solid fa-headset"></i>CONTACT US
+            </h3>
+            <h2 class="gallery-title-head">How to reach us</h2>
             <div class="sec-title-seperator">
               <div class="blue-item"></div>
             </div>
@@ -566,13 +577,13 @@
             <div class="contact-col">
               <div class="inner-info">
                 <span class="contact-phone-icon"
-                ><i class="fa-solid fa-phone-volume"></i
-              ></span>
-              <div class="contact-detail">
-                <a href="#" class="phone">+91 9048245318</a>
-                <a href="#" class="phone">+91 8921229471</a>
-              </div>
-              <div class="contact-text">Contact Phone</div>
+                  ><i class="fa-solid fa-phone-volume"></i
+                ></span>
+                <div class="contact-detail">
+                  <a href="#" class="phone">+91 9048245318</a>
+                  <a href="#" class="phone">+91 8921229471</a>
+                </div>
+                <div class="contact-text">Contact Phone</div>
               </div>
             </div>
             <div class="contact-col">
@@ -581,8 +592,12 @@
                   <i class="fa-solid fa-envelope-open-text"></i>
                 </span>
                 <div class="contact-detail">
-                  <a href="#" class="contact-email">scipytechnologies@gmail.com</a>
-                  <a href="#" class="contact-email">info@scipytechnologies.com</a>
+                  <a href="#" class="contact-email"
+                    >scipytechnologies@gmail.com</a
+                  >
+                  <a href="#" class="contact-email"
+                    >info@scipytechnologies.com</a
+                  >
                 </div>
                 <div class="contact-text">Contact Email</div>
               </div>
@@ -590,20 +605,294 @@
             <div class="contact-col">
               <div class="inner-info">
                 <span class="contact-phone-icon"
-                ><i class="fa-solid fa-map-location-dot"></i>
-              </span>
-              <div class="contact-detail">
-                <a href="#" class="location">
-                  Near Jubilee Hospital,<br> Palayam Trivandrum</a
-                >
-              </div>
-              <div class="contact-text">Contact Location</div>
+                  ><i class="fa-solid fa-map-location-dot"></i>
+                </span>
+                <div class="contact-detail">
+                  <a href="#" class="location">
+                    Near Jubilee Hospital,<br />
+                    Palayam Trivandrum</a
+                  >
+                </div>
+                <div class="contact-text">Contact Location</div>
               </div>
             </div>
           </div>
           <div class="company-loaction">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.9799481199398!2d76.94919077573755!3d8.501327297023996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bbb4d95185af%3A0x15f1640b53f2c59d!2sSciPy%20Technologies!5e0!3m2!1sen!2sin!4v1694704732756!5m2!1sen!2sin" width="1920" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.9799481199398!2d76.94919077573755!3d8.501327297023996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bbb4d95185af%3A0x15f1640b53f2c59d!2sSciPy%20Technologies!5e0!3m2!1sen!2sin!4v1694704732756!5m2!1sen!2sin"
+              width="1920"
+              height="400"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </div>
+        </div>
+      </section>
+      <section class="Technologies-one">
+        <div class="auto-container">
+          <div class="gallery-title">
+            <h3 class="sec-title-gallery tech-heading">
+              <i class="fa-solid fa-microchip"></i>Technologies
+            </h3>
+            <h2 class="gallery-title-head"></h2>
+            <div class="sec-title-seperator">
+              <div class="blue-item"></div>
+            </div>
+          </div>
+          <div class="tech-row">
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg"
+                />
+              </div>
+              <div class="tech-down">
+                <h3>React.Js</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original-wordmark.svg"
+                />
+              </div>
+              <div class="tech-down">
+                <h3>MongoDB</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original-wordmark.svg"
+                />
+              </div>
+              <div class="tech-down">
+                <h3>Node.Js</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg"
+                />
+              </div>
+              <div class="tech-down">
+                <h3>Express.Js</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg"
+                />
+              </div>
+              <div class="tech-down">
+                <h3>React Native</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-line.svg"
+                />
+              </div>
+              <div class="tech-down">
+                <h3>Next.Js</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
+                />
+              </div>
+              <div class="tech-down">
+                <h3>Python</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg"
+                />
+              </div>
+              <div class="tech-down">
+                <h3>Django</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pytorch/pytorch-original.svg"
+                />
+              </div>
+              <div class="tech-down">
+                <h3>Pytorch</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flask/flask-original.svg"
+                />
+              </div>
+              <div class="tech-down">
+                <h3>Flask</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tensorflow/tensorflow-original.svg"
+                />
+              </div>
+              <div class="tech-down">
+                <h3>TensorFlow</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="/assets/technologies/artificial-intelligence.png"
+                  alt=""
+                />
+              </div>
+              <div class="tech-down">
+                <h3>Artificial Intelligence</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img src="/assets/technologies/MachineLearning.png" alt="" />
+              </div>
+              <div class="tech-down">
+                <h3>Machine Learning</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img src="/assets/technologies/Deep-learning.png" alt="" />
+              </div>
+              <div class="tech-down">
+                <h3>Deep Learning</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img src="/assets/technologies/electron js.png" alt="" />
+              </div>
+              <div class="tech-down">
+                <h3>Electron.Js</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img src="/assets/technologies/nlp.png" alt="" />
+              </div>
+              <div class="tech-down">
+                <h3>Natural Language Processing</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg"
+                />
+              </div>
+              <div class="tech-down">
+                <h3>Bootstrap</h3>
+              </div>
+            </div>
+            <div class="tech-card">
+              <div class="tech-up">
+                <img
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg"
+                />
+              </div>
+              <div class="tech-down">
+                <h3>Tailwind</h3>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="owl-carousel owl-theme">
+            <div class="item tech-item">
+              <div class="tech-card">
+                <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg"
+              />
+              <div class="lower-tech">
+                <h3>React</h3>
+              </div>
+              </div>
+            </div>
+            <div class="item tech-item">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original-wordmark.svg"
+              />
+            </div>
+            <div class="item tech-item">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original-wordmark.svg"
+              />
+            </div>
+            <div class="item tech-item">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg"
+              />
+            </div>
+            <div class="item tech-item">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg"
+              />
+            </div>
+            <div class="item tech-item">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-line.svg"
+              />
+            </div>
+            <div class="item tech-item">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
+              />
+            </div>
+            <div class="item tech-item">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg"
+              />
+            </div>
+            <div class="item tech-item">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pytorch/pytorch-original.svg"
+              />
+            </div>
+            <div class="item tech-item">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flask/flask-original.svg"
+              />
+            </div>
+            <div class="item tech-item">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tensorflow/tensorflow-original.svg"
+              />
+            </div>
+            <div class="item tech-item">
+              <img src="/assets/technologies/artificial-intelligence.png" alt="">
+            </div>
+            <div class="item tech-item">
+              <img src="/assets/technologies/MachineLearning.png" alt="">
+            </div>
+            <div class="item tech-item">
+              <img src="/assets/technologies/Deep-learning.png" alt="">
+            </div>
+            <div class="item tech-item">
+              <img src="/assets/technologies/nlp.png" alt="">
+            </div>
+            <div class="item tech-item">
+              <img src="/assets/technologies/keras.png" alt="">
+            </div>
+          </div> -->
         </div>
       </section>
       <footer class="footer-main">
@@ -676,7 +965,8 @@
       <ul class="sidebar-menu">
         <li><img src="/assets/header-logo.png" alt="" /></li>
         <li><a id="home-sidebar" href="#">Home</a></li>
-        <li class="service-li"><a id="Service-sidebar" href="#">Services</a>
+        <li class="service-li">
+          <a id="Service-sidebar" href="#">Services</a>
           <!-- <ul class="sidebar-dropdown-menu" style="text-wrap: nowrap;">
             <li><a href="#">Software Development</a></li>
             <li><a href="#">Advanced Tech</a></li>
@@ -684,6 +974,8 @@
             <li><a href="#">Advisory</a></li>
           </ul>
         </li> -->
+        </li>
+
         <li><a href="#">Technologies</a></li>
         <li><a id="About-us-sidebar" href="#">About</a></li>
         <li><a id="contact-sidebar" href="#">Contact</a></li>
